# jopa-scheme

./: Cargo.toml  README.md  build_wasm.sh  do.jopa  expl.txt  incr.jopa  list.jopa  lst.jopa  main.jopa  make.sh  todo.md
examples/: ary.scm  do.scm  fast_fib.scm  incr.scm  lambda.scm  list.scm  main.scm  stdlib.scm  tailcall.scm
jop/: Cargo.toml
jop/src/: lib.rs
jopc/: Cargo.toml
jopc/src/: main.rs
jopwas/: Cargo.toml
jopwas/src/: lib.rs
repl/: Cargo.toml
repl/src/: main.rs
src/: exp.rs  lib.rs  main.rs  stdlib.scm
www/: index.html  index.js  jopwas.d.ts  jopwas.js  jopwas_bg.wasm  jopwas_bg.wasm.d.ts  package.json  server.sh
