[package]
name = "byol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Some dump comment

[dependencies]
rustyline = {version="11.0.0", features=['with-file-history']}

[lib]
name = "jop"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "jopc"
path = "src/bin/jopc.rs"
