[package]
name = "byol"
version = "0.1.0"
edition = "2021"

[lib]
name = "byol"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

# [[bin]]
# name = "repl"
# path = "src/bin/repl.rs"
#
# [[bin]]
# name = "jopc"
# path = "src/bin/jopc.rs"

[workspace]

members = [
    "jop",
    "repl",
    "jopc",
    "jopwas"
]
